# adhoc

./: .gitignore  README.md
go-scripts/: go.mod  run_partitions.go
go-scripts/batch-inserts/: main.go
go-scripts/get-ddl/: main.go
go-scripts/partitions/: main.go
go-scripts/vacuum-manager/: README.md  main.go
pypy/: t1.py
pypy/LLD/: ride-sharing.py
pypy/spark/: main.py  pyproject.toml
pypy/spark/fp1/: data.csv  p3.py  p4.py  t1.py
rust-kafka-to-doris/: Cargo.toml  config.json  flake.nix
rust-kafka-to-doris/src/: main.rs
rust-kafka-to-doris/src/utils/: cli.rs  kafka.rs  mod.rs
