[package]
name = "rust-kafka-to-doris"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.30.0", features = ["ssl", "sasl"] }
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
mysql = "24.0.0"
uuid = { version = "1.2.2", features = ["v4"] }
futures = "0.3.28"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
base64 = "0.13.0"
